update rule and logic scanqr code
